--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,7 @@ target/
 desktop.ini
 
 ### IntelliJ IDEA ###
-.idea/sonarlint
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
+.idea
 *.iws
 *.iml
 *.ipr
